# hi-mpu

./: GPL v2.0 license.md  MulanPSL-2.0 license.md  README.en.md  README.md
doc/: Hi3093一键式构建指南.md  Hi3093混合部署方案开发、使用指南.md  HiEulerOS开发调试FAQ.md  openEuler+UniProton混合部署方案编译运行指南.md  openEuler24.03系统QT组件适配指南.md  openEuler系统编译运行常见FAQ.md  openEuler系统编译运行指南.md
open_source/arm-trusted-firmware-2.7/: Makefile
open_source/libmetal/cmake/: depends.cmake
open_source/mcs/: CMakeLists.txt
open_source/mcs/mcs_km/: mcs_km.c
open_source/mcs/rpmsg_pty_baremetal/: rpmsg_main.c
open_source/mcs/rpmsg_pty_demo/: rpmsg_main.c  rpmsg_pty.c
open_source/mcs/rpmsg_pty_libck/: rpmsg_main.c
open_source/mcs/rpmsg_pty_uniproton/: rpmsg_main.c
open_source/musl/: Makefile  config.mak  configure
open_source/musl/debug/: backtrace.c  backtracesyms.c  backtracesymsfd.c
open_source/musl/include/: alltypes.h.in  execinfo.h  pthread.h  semaphore.h  threads.h
open_source/musl/ldso/: dynlink.c
open_source/open-amp/: CMakeLists.txt
open_source/open-amp/cmake/: depends.cmake
open_source/open-amp/lib/include/openamp/: rpmsg.h
open_source/open-amp/lib/remoteproc/: remoteproc.c
open_source/open-amp/lib/rpmsg/: rpmsg.c  rpmsg_virtio.c
open_source/u-boot/u-boot/: Kconfig
platform/osal/include/: osal_errno.h  osal_list.h  soc_osal.h
platform/osal/libck/: osal_addr.c  osal_debug.c  osal_event.c  osal_inner.h  osal_interrupt.c  osal_msgqueue.c  osal_semaphore.c  osal_task.c  osal_timer.c
platform/osal/nonos/: osal_atomic.c  osal_inner.h  osal_interrupt.c  osal_mutex.c  osal_semaphore.c  osal_spinlock.c  osal_task.c  osal_wait.c
platform/osal/uniproton/: osal_debug.c  osal_interrupt.c  osal_semaphore.c
platform/securec/src/: memcpy_s.c  securecutil.c
src/non_real_time/adapter_for_hi3093/: securec_5.10_makefile
src/non_real_time/drivers/: Makefile.cfg
src/non_real_time/include/: board_info.h
src/patches/openEuler/: emmc_sfc.patch  kernel-22.03-lts-sp3-mmc.patch  kernel-close-debug-flags.patch  (+1 more)
src/real_time/drivers/: CMakeLists.txt  Makefile
src/real_time/drivers/cache/: Makefile  cache.c  cache.h  cache_asm.S
src/real_time/drivers/common/: Makefile  bm_atomic.h  bm_common.c  bm_ops.h  hp_subsys.c  hp_subsys.h  io_config.c  io_config.h  lp_subsys.c  lp_subsys.h  reg_sysctrl.c  reg_sysctrl.h
src/real_time/drivers/dma/: Makefile  dmac.c  dmac.h  dmac_regs.h  dmac_union.h
src/real_time/drivers/gpio/: Makefile  gpio.c  gpio.h  gpio_pinmux_tbl.c  gpio_regs.h
src/real_time/drivers/i2c/: Makefile  i2c.c  i2c.h  i2c_config.h
src/real_time/drivers/include/: bm_cache.h  bm_common.h  bm_gpio.h  bm_i2c.h  bm_localbus.h  bm_mmu.h  bm_spi.h  bm_timer.h  bm_types.h  bm_wdg.h
src/real_time/drivers/local_bus/: Makefile  localbus.c  localbus.h
src/real_time/drivers/mmu/: Makefile  mmu.c  mmu.h
src/real_time/drivers/net/: Makefile  gmac.c  gmac.h  gmac_regs.h  mdio.c  mdio.h  motor_phy.c  motor_phy.h
src/real_time/drivers/spi/: Makefile  spi.c  spi.h  spi_regs.h
src/real_time/drivers/timer/: Makefile  timer.c  timer.h
src/real_time/drivers/uart/: Makefile  uart.c  uart_core.c  uart_core.h  uart_regs.h
src/real_time/drivers/watchdog/: Makefile  wdg.c  wdg.h
tools/coremsg/: Makefile  coremsg.c
tools/dts/: gen_defines.py  hi3093.txt
tools/emmc_divide/: Makefile  emmc_divide.c  emmc_divide.h
(+679 files in other folders)
